add temp namespace replacer

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Specification aggregator for bioschemas\n",
+    "\n",
+    "The DDE intentionally does not allow existing namespaces to be used by others. This is a feature that ensures that user-generated schemas or user-customized schemas are not confused for existing, registered schemas. Unfortunately, this means that users looking to update an existing bioschemas cannot use the bioschemas namespace when creating a schema within the DDE. The aggregator includes a function will replace the temporary namespace with the bioschemas namespace for the merge."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rename_namespace(spec_list,eachurl,rawtext):\n",
+    "    tmpinfo = spec_list.loc[spec_list['url']==eachurl]\n",
+    "    tmpnamespace = tmpinfo.iloc[0]['namespace']\n",
+    "    if namespace!='bioschemas'\n",
+    "        tmptext = '\"@id\": \"'+tmpnamespace+':'\n",
+    "        cleantext = rawtext.replace(tmptext,'\"@id\": \"bioschemas:')\n",
+    "    else:\n",
+    "        cleantext = rawtext\n",
+    "    return(cleantext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +65,8 @@
     "        rawurl = get_raw_url(eachurl)\n",
     "        r = requests.get(rawurl)\n",
     "        if r.status_code == 200:\n",
-    "            spec_json = json.loads(r.text)\n",
+    "            cleantext = rename_namespace(spec_list,eachurl,r.text)\n",
+    "            spec_json = json.loads(cleantext)\n",
     "            bioschemas_json['@context'] = spec_json['@context']\n",
     "            for x in spec_json['@graph']:\n",
     "                if x not in graphlist:\n",
@@ -50,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "## main\n",
-    "update_specs()"
+    "update_specs()\n"
    ]
   },
   {
@@ -76,9 +103,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## To do -- add check to ensure profiles and types listed are using the bioschemas namespace"
-   ]
+   "source": []
   }
  ],
  "metadata": {
