Addresses https://github.com/biothings/discovery-app/issues/99

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -27,6 +27,7 @@
     "  * This means that the `\"schema:domainIncludes\"` property should be updated to reflect ALL of the classes that use it, rather than just the first class that uses it.\n",
     "  * eg- \"bioschemas:output\" might be a property in \"ComputationalTool\" and \"ComputationalWorkflow\". Since these profiles are developed separately, the one in \"ComputationalTool\" will include `\"schema:domainIncludes\": {\"@id\": \"bioschemas:ComputationalTool\"}` while the one from ComputationalWorkflow will include `\"schema:domainIncludes\": {\"@id\": \"bioschemas:ComputationalWorkflow\"}`. These will need to be merged into a single property with `\"schema:domainIncludes\": [{\"@id\": \"bioschemas:ComputationalTool\"},{\"@id\": \"bioschemas:ComputationalWorkflow\"}]`\n",
     "6. Include a check for the proper url for bioschemas in @context\n",
+    "7. Automatically include `dct:conformsTo` to all classes definied by the schema\n",
     "  "
    ]
   },
@@ -90,6 +91,7 @@
     "    contextInfo = spec_json['@context']\n",
     "    bioschemasUrl = \"https://discovery.biothings.io/view/bioschemas/\"\n",
     "    contextInfo[\"bioschemas\"]=bioschemasUrl\n",
+    "    contextInfo[\"dct\"] = \"http://purl.org/dc/terms/\"\n",
     "    return(contextInfo)\n",
     "\n",
     "def update_subclass(spec_list,eachurl,cleantext):\n",
@@ -110,18 +112,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_duplicate_classes(graphlist,classlist):\n",
+    "def add_conformsTo(spec_list,x):\n",
+    "    spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemas:\",\"\")]\n",
+    "    spec_url = spec_info.iloc[0]['url']\n",
+    "    conformsTodict = {\n",
+    "            \"description\": \"This is used to state the Bioschemas profile that the markup relates to. The identifier can be the url for the version of this bioschemas class on github: \"+spec_url,\n",
+    "            \"$ref\": \"#/definitions/conformsDefinition\"\n",
+    "          }\n",
+    "    conformdef={\n",
+    "                \"@type\": \"CreativeWork\",\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                  \"identifier\":{\n",
+    "                    \"description\": \"The url of the version bioschemas profile that was used. For jsonschema, set @id to the identifier\",\n",
+    "                    \"oneOf\": [\n",
+    "                      {\n",
+    "                        \"enum\": [spec_url] \n",
+    "                      },\n",
+    "                      {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"format\": \"uri\"\n",
+    "                      }\n",
+    "                    ]\n",
+    "                  }\n",
+    "                },\n",
+    "                \"required\": [\n",
+    "                  \"identifier\"\n",
+    "                ]              \n",
+    "        }\n",
+    "    x['$validation']['properties']['conformsTo'] = conformsTodict\n",
+    "    requirementlist = x['$validation']['required']\n",
+    "    requirementlist.append('conformsTo')\n",
+    "    x['$validation']['required'] = requirementlist\n",
+    "    try:\n",
+    "        definitiondict = x['$validation']['definitions']\n",
+    "    except:\n",
+    "        definitiondict = {}\n",
+    "    definitiondict[\"conformsDefinition\"]=conformdef\n",
+    "    x['$validation']['definitions']=definitiondict\n",
+    "    return(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_duplicate_classes(spec_list,graphlist,classlist):\n",
     "    duplicates = [i for i in set(classlist) if classlist.count(i) > 1]\n",
     "    nondupes = [x for x in classlist if x not in duplicates]\n",
     "    if len(duplicates)>0:  ## There are duplicate classes to clean up\n",
     "        cleanclassgraph = []\n",
     "        for x in graphlist:\n",
     "            if x[\"@id\"] in nondupes:\n",
-    "                cleanclassgraph.append(x)\n",
+    "                y = add_conformsTo(spec_list,x)\n",
+    "                cleanclassgraph.append(y)\n",
     "            for eachclass in duplicates:\n",
     "                if x[\"@id\"]==eachclass:\n",
     "                    if \"$validation\" in x.keys():\n",
-    "                        cleanclassgraph.append(x)\n",
+    "                        y = add_conformsTo(spec_list,x)\n",
+    "                        cleanclassgraph.append(y)\n",
     "    return(cleanclassgraph)\n",
     "\n",
     "def clean_duplicate_properties(graphlist, propertylist):            \n",
@@ -157,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,20 +230,44 @@
     "                    classlist.append(x[\"@id\"])\n",
     "                if x[\"@type\"]==\"rdf:Property\":\n",
     "                    propertylist.append(x[\"@id\"])\n",
-    "    cleanclassgraph = clean_duplicate_classes(graphlist,classlist)\n",
+    "    cleanclassgraph = clean_duplicate_classes(spec_list,graphlist,classlist)\n",
     "    cleanpropsgraph = clean_duplicate_properties(graphlist, propertylist)\n",
     "    cleangraph = []\n",
     "    for z in cleanclassgraph:\n",
     "        cleangraph.append(z)\n",
     "    for a in cleanpropsgraph:\n",
     "        cleangraph.append(a)\n",
+    "    conformsTo = define_conformsTo(classlist)\n",
+    "    cleangraph.append(conformsTo)\n",
     "    bioschemas_json['@graph']=cleangraph\n",
     "    return(bioschemas_json)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def define_conformsTo(classlist):\n",
+    "    uniqueclasses =  list(set(classlist))\n",
+    "    classidlist = [{\"@id\":x} for x in classlist]\n",
+    "    conformsTo = {\n",
+    "      \"@id\": \"dct:conformsTo\",\n",
+    "      \"@type\": \"rdf:Property\",\n",
+    "      \"rdfs:comment\": \"Used to state the Bioschemas profile that the markup relates to. The versioned URL of the profile must be used. Note that we use a CURIE in the table here but the full URL for Dublin Core terms must be used in the markup (http://purl.org/dc/terms/conformsTo), see example.\",\n",
+    "      \"rdfs:label\": \"conformsTo\",\n",
+    "      \"schema:domainIncludes\": classidlist,\n",
+    "      \"schema:rangeIncludes\": [\n",
+    "        {\"@id\": \"schema:CreativeWork\"},{\"@id\": \"schema:Text\"},{\"@id\": \"schema:Thing\"}\n",
+    "      ]\n",
+    "    }\n",
+    "    return(conformsTo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,10 +319,46 @@
     "\n",
     "cleanclassgraph = clean_duplicate_classes(graphlist,classlist)\n",
     "cleanpropsgraph = clean_duplicate_properties(graphlist, propertylist)\n",
-    "print(len(graphlist))\n",
+    "cleangraph = []\n",
+    "for z in cleanclassgraph:\n",
+    "    cleangraph.append(z)\n",
+    "for a in cleanpropsgraph:\n",
+    "    cleangraph.append(a)\n",
+    "conformsTo = define_conformsTo(classlist)\n",
+    "cleangraph.append(conformsTo)\n",
+    "print(len(cleangraph))\n",
     "print(len(cleanclassgraph)+len(cleanpropsgraph))\n",
-    "print(len(cleanclassgraph),len(cleanpropsgraph))\n"
+    "print(len(cleanclassgraph),len(cleanpropsgraph))\n",
+    "print(cleangraph[-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classidlist = [{\"@id\":x} for x in classlist]\n",
+    "print(classidlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec_list = read_csv('specifications_list.txt',delimiter='\\t',header=0)\n",
+    "spec_info = spec_list.loc[spec_list['name']==\"Gene\"]\n",
+    "print(spec_info.iloc[0]['url'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
