update function to clean up duplicate classes

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -162,8 +162,8 @@
     "def clean_duplicate_classes(spec_list,graphlist,classlist):\n",
     "    duplicates = [i for i in set(classlist) if classlist.count(i) > 1]\n",
     "    nondupes = [x for x in classlist if x not in duplicates]\n",
+    "    cleanclassgraph = []\n",
     "    if len(duplicates)>0:  ## There are duplicate classes to clean up\n",
-    "        cleanclassgraph = []\n",
     "        for x in graphlist:\n",
     "            if x[\"@id\"] in nondupes:\n",
     "                y = add_conformsTo(spec_list,x)\n",
@@ -173,6 +173,11 @@
     "                    if \"$validation\" in x.keys():\n",
     "                        y = add_conformsTo(spec_list,x)\n",
     "                        cleanclassgraph.append(y)\n",
+    "    else:  ## There are not duplicate classes to clean up\n",
+    "        for x in graphlist:\n",
+    "            if x[\"@id\"] in nondupes:\n",
+    "                y = add_conformsTo(spec_list,x)\n",
+    "                cleanclassgraph.append(y)        \n",
     "    return(cleanclassgraph)\n",
     "\n",
     "def clean_duplicate_properties(graphlist, propertylist):            \n",
