Add schemaVersion to merge script

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -28,6 +28,8 @@
     "  * eg- \"bioschemas:output\" might be a property in \"ComputationalTool\" and \"ComputationalWorkflow\". Since these profiles are developed separately, the one in \"ComputationalTool\" will include `\"schema:domainIncludes\": {\"@id\": \"bioschemas:ComputationalTool\"}` while the one from ComputationalWorkflow will include `\"schema:domainIncludes\": {\"@id\": \"bioschemas:ComputationalWorkflow\"}`. These will need to be merged into a single property with `\"schema:domainIncludes\": [{\"@id\": \"bioschemas:ComputationalTool\"},{\"@id\": \"bioschemas:ComputationalWorkflow\"}]`\n",
     "6. Include a check for the proper url for bioschemas in @context\n",
     "7. Automatically include `dct:conformsTo` to all classes definied by the schema\n",
+    "8. Automatically include `schema:schemaVersion` to all classes defined by the schema\n",
+    "\n",
     "  "
    ]
   },
@@ -36,7 +38,9 @@
    "metadata": {},
    "source": [
     "### To do\n",
-    "1. Include a check for properties which already have a list for the domainIncludes\n"
+    "1. Include a check for properties which already have a list for the domainIncludes\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -155,60 +159,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_duplicate_classes(spec_list,graphlist,classlist):\n",
-    "    duplicates = [i for i in set(classlist) if classlist.count(i) > 1]\n",
-    "    nondupes = [x for x in classlist if x not in duplicates]\n",
-    "    cleanclassgraph = []\n",
-    "    if len(duplicates)>0:  ## There are duplicate classes to clean up\n",
-    "        for x in graphlist:\n",
-    "            if x[\"@id\"] in nondupes:\n",
-    "                y = add_conformsTo(spec_list,x)\n",
-    "                cleanclassgraph.append(y)\n",
-    "            for eachclass in duplicates:\n",
-    "                if x[\"@id\"]==eachclass:\n",
-    "                    if \"$validation\" in x.keys():\n",
-    "                        y = add_conformsTo(spec_list,x)\n",
-    "                        cleanclassgraph.append(y)\n",
-    "    else:  ## There are not duplicate classes to clean up\n",
-    "        for x in graphlist:\n",
-    "            if x[\"@id\"] in nondupes:\n",
-    "                y = add_conformsTo(spec_list,x)\n",
-    "                cleanclassgraph.append(y)        \n",
-    "    return(cleanclassgraph)\n",
-    "\n",
-    "def clean_duplicate_properties(graphlist, propertylist):            \n",
-    "    duplicates = [i for i in set(propertylist) if propertylist.count(i) > 1]\n",
-    "    nondupes = [x for x in propertylist if x not in duplicates]\n",
-    "    if len(duplicates)>0:  ## There are duplicate properties to clean up\n",
-    "        cleanpropsgraph = []\n",
-    "        dupepropsgraph = []\n",
-    "        for x in graphlist:\n",
-    "            if x[\"@id\"] in nondupes:\n",
-    "                cleanpropsgraph.append(x)\n",
-    "            elif x[\"@id\"] in duplicates:\n",
-    "                dupepropsgraph.append(x)\n",
-    "        #dupepropsgraph[0][\"dummyProp\"]={\"@id\":\"dummyValue\"} #### creates dummy property for testing only\n",
-    "        dupepropsdf = pd.DataFrame(dupepropsgraph)\n",
-    "        for eachprop in duplicates:\n",
-    "            tmpdf = dupepropsdf.loc[dupepropsdf['@id']==eachprop].copy()\n",
-    "            domainlist = []\n",
-    "            domainlist = [y for y in tmpdf[\"schema:domainIncludes\"] if y not in domainlist]\n",
-    "            #### Get the row with the least number of NaNs (ie- the row with the most properties) to serve as the base property\n",
-    "            tmpdf[\"nullcount\"]=tmpdf.isnull().sum(axis=1)\n",
-    "            tmpdf.sort_values(\"nullcount\",ascending=True,inplace=True)\n",
-    "            tmpdict = tmpdf.iloc[0].to_dict()\n",
-    "            del tmpdict[\"nullcount\"]\n",
-    "            tmpdict[\"schema:domainIncludes\"]=domainlist #### Set the domainIncludes list\n",
-    "            cleanpropsgraph.append(tmpdict)       \n",
-    "    else:\n",
-    "        for x in graphlist:\n",
-    "            if x[\"@id\"] in nondupes:\n",
-    "                cleanpropsgraph.append(x)\n",
-    "    return(cleanpropsgraph)   "
+    "def add_schemaVersion(spec_list,x):\n",
+    "    spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemas:\",\"\")]\n",
+    "    spec_url = spec_info.iloc[0]['url']\n",
+    "    baseurl = \"https://bioschemas.org/\"\n",
+    "    versionurl = baseurl+'/'+spec_info.iloc[0]['type']+'/'+spec_info.iloc[0]['name']+'/'+spec_info.iloc[0]['version']\n",
+    "    try:\n",
+    "        existingversions = x[\"schema:schemaVersion\"]\n",
+    "        if isinstance(schemaversions, list) == False:\n",
+    "            schemaversions = existingversions.strip(\"[\").strip(\"]\").split(\",\")\n",
+    "        else:\n",
+    "            schemaversions = existingversions\n",
+    "    except:\n",
+    "        schemaversions = []\n",
+    "    schemaversions.append(versionurl)\n",
+    "    schemaversions.append(spec_url)\n",
+    "    x[\"schema:schemaVersion\"] = schemaversions\n",
+    "    return(x)"
    ]
   },
   {
@@ -254,6 +225,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def clean_duplicate_classes(spec_list,graphlist,classlist):\n",
+    "    duplicates = [i for i in set(classlist) if classlist.count(i) > 1]\n",
+    "    nondupes = [x for x in classlist if x not in duplicates]\n",
+    "    cleanclassgraph = []\n",
+    "    if len(duplicates)>0:  ## There are duplicate classes to clean up\n",
+    "        for x in graphlist:\n",
+    "            if x[\"@id\"] in nondupes:\n",
+    "                y = add_conformsTo(spec_list,x)\n",
+    "                z = add_schemaVersion(spec_list,y)\n",
+    "                cleanclassgraph.append(z)\n",
+    "            for eachclass in duplicates:\n",
+    "                if x[\"@id\"]==eachclass:\n",
+    "                    if \"$validation\" in x.keys():\n",
+    "                        y = add_conformsTo(spec_list,x)\n",
+    "                        z = add_schemaVersion(spec_list,y)\n",
+    "                        cleanclassgraph.append(z)\n",
+    "    else:  ## There are not duplicate classes to clean up\n",
+    "        for x in graphlist:\n",
+    "            if x[\"@id\"] in nondupes:\n",
+    "                y = add_conformsTo(spec_list,x)\n",
+    "                z = add_schemaVersion(spec_list,y)\n",
+    "                cleanclassgraph.append(z)        \n",
+    "    return(cleanclassgraph)\n",
+    "\n",
+    "def clean_duplicate_properties(graphlist, propertylist):            \n",
+    "    duplicates = [i for i in set(propertylist) if propertylist.count(i) > 1]\n",
+    "    nondupes = [x for x in propertylist if x not in duplicates]\n",
+    "    if len(duplicates)>0:  ## There are duplicate properties to clean up\n",
+    "        cleanpropsgraph = []\n",
+    "        dupepropsgraph = []\n",
+    "        for x in graphlist:\n",
+    "            if x[\"@id\"] in nondupes:\n",
+    "                cleanpropsgraph.append(x)\n",
+    "            elif x[\"@id\"] in duplicates:\n",
+    "                dupepropsgraph.append(x)\n",
+    "        #dupepropsgraph[0][\"dummyProp\"]={\"@id\":\"dummyValue\"} #### creates dummy property for testing only\n",
+    "        dupepropsdf = pd.DataFrame(dupepropsgraph)\n",
+    "        for eachprop in duplicates:\n",
+    "            tmpdf = dupepropsdf.loc[dupepropsdf['@id']==eachprop].copy()\n",
+    "            domainlist = []\n",
+    "            domainlist = [y for y in tmpdf[\"schema:domainIncludes\"] if y not in domainlist]\n",
+    "            #### Get the row with the least number of NaNs (ie- the row with the most properties) to serve as the base property\n",
+    "            tmpdf[\"nullcount\"]=tmpdf.isnull().sum(axis=1)\n",
+    "            tmpdf.sort_values(\"nullcount\",ascending=True,inplace=True)\n",
+    "            tmpdict = tmpdf.iloc[0].to_dict()\n",
+    "            del tmpdict[\"nullcount\"]\n",
+    "            tmpdict[\"schema:domainIncludes\"]=domainlist #### Set the domainIncludes list\n",
+    "            cleanpropsgraph.append(tmpdict)       \n",
+    "    else:\n",
+    "        for x in graphlist:\n",
+    "            if x[\"@id\"] in nondupes:\n",
+    "                cleanpropsgraph.append(x)\n",
+    "    return(cleanpropsgraph)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def define_conformsTo(classlist):\n",
     "    uniqueclasses =  list(set(classlist))\n",
     "    classidlist = [{\"@id\":x} for x in classlist]\n",
@@ -272,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
