--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -166,7 +166,7 @@
     "def add_schemaVersion(spec_list,x):\n",
     "    spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemas:\",\"\")]\n",
     "    spec_url = spec_info.iloc[0]['url']\n",
-    "    baseurl = \"https://bioschemas.org/\"\n",
+    "    baseurl = \"https://bioschemas.org\"\n",
     "    versionurl = baseurl+'/'+spec_info.iloc[0]['type']+'/'+spec_info.iloc[0]['name']+'/'+spec_info.iloc[0]['version']\n",
     "    try:\n",
     "        existingversions = x[\"schema:schemaVersion\"]\n",
