include check for duplicate schema version elements

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,8 @@
     "        schemaversions = []\n",
     "    schemaversions.append(versionurl)\n",
     "    schemaversions.append(spec_url)\n",
-    "    x[\"schema:schemaVersion\"] = schemaversions\n",
+    "    ## Ensure uniqueness of elements\n",
+    "    x[\"schema:schemaVersion\"] = list(set(schemaversions))\n",
     "    return(x)"
    ]
   },
