add event and journal draft profiles

--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -167,7 +167,7 @@
     "    spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemas:\",\"\")]\n",
     "    spec_url = spec_info.iloc[0]['url']\n",
     "    baseurl = \"https://bioschemas.org\"\n",
-    "    versionurl = baseurl+'/'+spec_info.iloc[0]['type']+'/'+spec_info.iloc[0]['name']+'/'+spec_info.iloc[0]['version']\n",
+    "    versionurl = baseurl+'/'+spec_info.iloc[0]['type'].lower()+'s/'+spec_info.iloc[0]['name']+'/'+spec_info.iloc[0]['version']\n",
     "    try:\n",
     "        existingversions = x[\"schema:schemaVersion\"]\n",
     "        if isinstance(schemaversions, list) == False:\n",
