--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_specification_type(spec_list,x):\n",
+    "    spec_info = spec_list.loc[spec_list['name']==x['@id'].replace(\"bioschemas:\",\"\")]\n",
+    "    if spec_info.iloc[0]['type']=='Type':\n",
+    "        baseurl = 'https://bioschemas.org/types#nav-'\n",
+    "    elif spec_info.iloc[0]['type']=='Profile':\n",
+    "        baseurl = 'https://bioschemas.org/profiles#nav-'\n",
+    "    if 'deprecated' in spec_info.iloc[0]['version'].lower():\n",
+    "        typeurl = baseurl+'deprecated'\n",
+    "    elif 'release' in spec_info.iloc[0]['version'].lower():\n",
+    "        typeurl = baseurl+'release'\n",
+    "    elif 'draft' in spec_info.iloc[0]['version'].lower():\n",
+    "        typeurl = baseurl+'draft'\n",
+    "    x['additional_type'] = typeurl\n",
+    "    return(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,22 +255,26 @@
     "    if len(duplicates)>0:  ## There are duplicate classes to clean up\n",
     "        for x in graphlist:\n",
     "            if x[\"@id\"] in nondupes:\n",
+    "                x = add_specification_type(spec_list,x)\n",
+    "                x = add_schemaVersion(spec_list,x)\n",
     "                if \"$validation\" in x.keys():\n",
-    "                    y = add_conformsTo(spec_list,x)\n",
-    "                    z = add_schemaVersion(spec_list,y)\n",
-    "                    cleanclassgraph.append(z)\n",
+    "                    x = add_conformsTo(spec_list,x)\n",
+    "                cleanclassgraph.append(x)\n",
     "            for eachclass in duplicates:\n",
     "                if x[\"@id\"]==eachclass:\n",
+    "                    x = add_specification_type(spec_list,x)\n",
+    "                    x = add_schemaVersion(spec_list,x)\n",
     "                    if \"$validation\" in x.keys():\n",
-    "                        y = add_conformsTo(spec_list,x)\n",
-    "                        z = add_schemaVersion(spec_list,y)\n",
-    "                        cleanclassgraph.append(z)\n",
+    "                        x = add_conformsTo(spec_list,x)\n",
+    "                    cleanclassgraph.append(x)\n",
     "    else:  ## There are not duplicate classes to clean up\n",
     "        for x in graphlist:\n",
     "            if x[\"@id\"] in nondupes:\n",
-    "                y = add_conformsTo(spec_list,x)\n",
-    "                z = add_schemaVersion(spec_list,y)\n",
-    "                cleanclassgraph.append(z)        \n",
+    "                x = add_specification_type(spec_list,x)\n",
+    "                x = add_schemaVersion(spec_list,x)\n",
+    "                if \"$validation\" in x.keys():\n",
+    "                    x = add_conformsTo(spec_list,x)\n",
+    "                cleanclassgraph.append(x)        \n",
     "    return(cleanclassgraph)\n",
     "\n",
     "def clean_duplicate_properties(graphlist, propertylist):            \n",
@@ -284,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
